--- a/css/glitch.css
+++ b/css/glitch.css
@@ -4,7 +4,7 @@ body,
 h1 {
   padding: 0;
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Forum', cursive;
 }
 #app {
   background: #0a0a0a;
@@ -26,7 +26,7 @@ h1 {
   text-align: center;
 }
 .sub {
-  color: #000000;
+  color: #00ccff;
   letter-spacing: 1em;
 }
 /* Our mixin positions a copy of our text directly on our existing text, while also setting content to the appropriate text set in the data-text attribute. */
@@ -36,7 +36,7 @@ h1 {
   font-size: 4em;
   letter-spacing: 0.5em;
   /* Animation provies a slight random skew. Check bottom of doc for more information on how to random skew. */
-  animation: glitch-skew 1s infinite linear alternate-reverse;
+  animation: glitch-skew 3s infinite linear alternate-reverse;
 }
 .glitch::before {
   content: attr(data-text);
@@ -46,11 +46,11 @@ h1 {
   width: 100%;
   height: 100%;
   left: 2px;
-  text-shadow: -2px 0 #00ff22;
+  text-shadow: -2px 0 #ff00ff;
   /* Creates an initial clip for our glitch. This works in a typical top,right,bottom,left fashion and creates a mask to only show a certain part of the glitch at a time. */
   clip: rect(44px, 450px, 56px, 0);
   /* Runs our glitch-anim defined below to run in a 5s loop, infinitely, with an alternating animation to keep things fresh. */
-  animation: glitch-anim 5s infinite linear alternate-reverse;
+  animation: glitch-anim 8s infinite linear alternate-reverse;
 }
 .glitch::after {
   content: attr(data-text);
@@ -60,8 +60,8 @@ h1 {
   width: 100%;
   height: 100%;
   left: -2px;
-  text-shadow: -2px 0 #000000, 2px 2px #00ff15;
-  animation: glitch-anim2 1s infinite linear alternate-reverse;
+  text-shadow: -2px 0 #000000, 2px 2px #ff00ff;
+  animation: glitch-anim2 3s infinite linear alternate-reverse;
 }
 /* Creates an animation with 20 steaps. For each step, it calculates a percentage for the specific step. It then generates a random clip box to be used for the random glitch effect. Also adds a very subtle skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
