--- a/css/glitch.css
+++ b/css/glitch.css
@@ -4,7 +4,7 @@ body,
 h1 {
   padding: 0;
   margin: 0;
-  font-family: 'Forum';
+  font-family: 'Forum', normal;
 }
 #app {
   background: #0a0a0a;
@@ -16,8 +16,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgba(10, 10, 10, 0.6), rgba(0, 0, 0, 0.9)), repeating-linear-gradient(0, transparent, transparent 2px, black 3px, black 3px),
-    url('../images/rain.mp4');
+  background-image: url('../images/rain.gif');
   background-size: cover;
   background-position: center;
   z-index: 1;
