--- a/css/css.css
+++ b/css/css.css
@@ -1,6 +1,6 @@
 /* cyrillic-ext */
 @font-face {
-  font-family: 'Forum';
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 100;
   src: url(../fonts/JTUQjIg1_i6t8kCHKm45_QpRxC7gw9c.woff) format('woff');
@@ -8,7 +8,7 @@
 }
 /* cyrillic */
 @font-face {
-  font-family: 'Forum';
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 100;
   src: url(../fonts/JTUQjIg1_i6t8kCHKm45_QpRzS7gw9c.woff) format('woff');
@@ -16,7 +16,7 @@
 }
 /* vietnamese */
 @font-face {
-  font-family: 'Forum';
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 100;
   src: url(../fonts/JTUQjIg1_i6t8kCHKm45_QpRxi7gw9c.woff) format('woff');
@@ -24,7 +24,7 @@
 }
 /* latin-ext */
 @font-face {
-  font-family: 'Forum';
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 100;
   src: url(../fonts/JTUQjIg1_i6t8kCHKm45_QpRxy7gw9c.woff) format('woff');
@@ -32,7 +32,7 @@
 }
 /* latin */
 @font-face {
-  font-family: 'Forum';
+  font-family: 'Montserrat';
   font-style: normal;
   font-weight: 100;
   src: url(../fonts/JTUQjIg1_i6t8kCHKm45_QpRyS7g.woff) format('woff');
