--- a/css/glitch.css
+++ b/css/glitch.css
@@ -4,10 +4,10 @@ body,
 h1 {
   padding: 0;
   margin: 0;
-  font-family: 'Forum', normal;
+  font-family: 'Forum';
 }
 #app {
-  background: #0a0a0a;
+  background: black;
   height: 100vh;
   width: 100%;
   margin: 0;
@@ -25,7 +25,7 @@ h1 {
   text-align: center;
 }
 .sub {
-  color: #00ccff;
+  color: #Ff9500;
   letter-spacing: 1em;
 }
 /* Our mixin positions a copy of our text directly on our existing text, while also setting content to the appropriate text set in the data-text attribute. */
@@ -59,7 +59,8 @@ h1 {
   width: 100%;
   height: 100%;
   left: -2px;
-  text-shadow: -2px 0 #000000, 2px 2px #ff00ff;
+  text-shadow: -2px 0 black, 2px 2px palevioletred
+  ;
   animation: glitch-anim2 3s infinite linear alternate-reverse;
 }
 /* Creates an animation with 20 steaps. For each step, it calculates a percentage for the specific step. It then generates a random clip box to be used for the random glitch effect. Also adds a very subtle skew to change the 'thickness' of the glitch.*/
