--- a/css/glitch.css
+++ b/css/glitch.css
@@ -25,7 +25,7 @@ h1 {
   text-align: center;
 }
 .sub {
-  color: #Ff9500;
+  color: #00ff00;
   letter-spacing: 1em;
 }
 /* Our mixin positions a copy of our text directly on our existing text, while also setting content to the appropriate text set in the data-text attribute. */
@@ -45,7 +45,7 @@ h1 {
   width: 100%;
   height: 100%;
   left: 2px;
-  text-shadow: -2px 0 #ff00ff;
+  text-shadow: -2px 0 #00ff00;
   /* Creates an initial clip for our glitch. This works in a typical top,right,bottom,left fashion and creates a mask to only show a certain part of the glitch at a time. */
   clip: rect(44px, 450px, 56px, 0);
   /* Runs our glitch-anim defined below to run in a 5s loop, infinitely, with an alternating animation to keep things fresh. */
@@ -59,7 +59,7 @@ h1 {
   width: 100%;
   height: 100%;
   left: -2px;
-  text-shadow: -2px 0 black, 2px 2px palevioletred
+  text-shadow: -2px 0 black, 2px 2px #00ff00
   ;
   animation: glitch-anim2 3s infinite linear alternate-reverse;
 }
