--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@ nav {
     background-color: white;
 }
 
+nav p {
+    font-family: 'Forum';
+    color: #222;
+    font-size: 24px;
+    line-height: 55px;
+    float: left;
+    padding: 0px 20px;
+}
+
 nav ul {
     float: left; 
 }
@@ -11,4 +20,13 @@ nav ul {
 nav ul li {
     float: left;
     list-style: none;
+}
+
+nav ul li a {
+    display: block;
+    font-family: 'Forum';
+    color: #222;
+    font-size: 24px;
+    padding: 22px 14px;
+    text-decoration: none;
 }
