--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ nav ul {
 nav ul li {
     float: left;
     list-style: none;
+    position: relative;
 }
 
 nav ul li a {
@@ -29,4 +30,30 @@ nav ul li a {
     font-size: 24px;
     padding: 22px 14px;
     text-decoration: none;
+}
+
+nav ul li ul {
+    display: none;
+    position: absolute;
+    background-color: white;
+    padding: 4px;
+    border-radius: 0px 0px 4px 4px;
+}
+
+nav ul li:hover ul {
+    display: block;
+
+}
+
+nav ul li ul li {
+    width: 180px;
+    border-radius: 4px;
+}
+
+nav ul li ul li a {
+    padding: 8px 14px;
+}
+
+nav ul li ul li a:hover {
+    background-color: grey;
 }
