--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 nav {
     width: 100%;
     height: 60px;
+    background-color: transparent;
 }
 
 nav ul {
@@ -16,7 +17,7 @@ nav ul li {
 nav ul li a {
     display: block;
     font-family: 'Forum';
-    color: #222;
+    color: rgb(255, 255, 255);
     font-size: 24px;
     padding: 22px 14px;
     text-decoration: none;
@@ -25,7 +26,7 @@ nav ul li a {
 nav ul li ul {
     display: none;
     position: absolute;
-    background-color: white;
+    background-color: transparent;
     padding: 4px;
     border-radius: 0px 0px 4px 4px;
 }
