--- a/css/glitch.css
+++ b/css/glitch.css
@@ -7,7 +7,6 @@ h1 {
   font-family: 'Forum';
 }
 #app {
-  background: black;
   height: 100vh;
   width: 100%;
   margin: 0;
@@ -16,9 +15,6 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url('../images/rain.gif');
-  background-size: cover;
-  background-position: center;
   z-index: 1;
 }
 #wrapper {
@@ -62,6 +58,61 @@ h1 {
   text-shadow: -2px 0 black, 2px 2px #00ff00
   ;
   animation: glitch-anim2 3s infinite linear alternate-reverse;
+}
+
+body {
+  background-image: url('../images/rain.gif');
+  background-size: cover;
+  background-position: center;
+}
+nav {
+  width: 0%;
+  height: 0px;
+  background-color: transparent;
+}
+nav ul {
+    float: left; 
+}
+
+nav ul li {
+    float: left;
+    list-style: none;
+    position: relative;
+}
+
+nav ul li a {
+    display: block;
+    font-family: 'Forum';
+    color: rgb(255, 255, 255);
+    font-size: 36px;
+    padding: 22px 14px;
+    text-decoration: none;
+}
+
+nav ul li ul {
+    display: none;
+    position: absolute;
+    background-color: transparent;
+    padding: 4px;
+    border-radius: 0px 0px 4px 4px;
+}
+
+nav ul li:hover ul {
+    display: block;
+
+}
+
+nav ul li ul li {
+    width: 180px;
+    border-radius: 4px;
+}
+
+nav ul li ul li a {
+    padding: 8px 14px;
+}
+
+nav ul li ul li a:hover {
+    background-color: grey;
 }
 /* Creates an animation with 20 steaps. For each step, it calculates a percentage for the specific step. It then generates a random clip box to be used for the random glitch effect. Also adds a very subtle skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
