--- a/css/glitch.css
+++ b/css/glitch.css
@@ -62,7 +62,7 @@ h1 {
 }
 
 body {
-  background-image: url('../images/mountains.jpg');
+  background-image: url('../images/mountains.png');
   background-size: cover;
   background-position: center;
 }
