--- a/css/glitch.css
+++ b/css/glitch.css
@@ -4,7 +4,7 @@ body,
 h1 {
   padding: 0;
   margin: 0;
-  font-family: 'Forum';
+  font-family: 'Cabin Condensed', sans-serif;
 }
 #app {
   height: 100vh;
@@ -20,306 +20,60 @@ h1 {
 #wrapper {
   text-align: center;
 }
-.sub {
-  color: #00ff00;
-  letter-spacing: 1em;
-}
-/* Our mixin positions a copy of our text directly on our existing text, while also setting content to the appropriate text set in the data-text attribute. */
-.glitch {
-  position: relative;
-  color: white;
-  font-size: 4em;
-  font-weight: 500;
-  letter-spacing: 0.5em;
-  /* Animation provies a slight random skew. Check bottom of doc for more information on how to random skew. */
-  animation: glitch-skew 3s infinite linear alternate-reverse;
-}
-.glitch::before {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  left: 2px;
-  text-shadow: -2px 0 #00ff00;
-  /* Creates an initial clip for our glitch. This works in a typical top,right,bottom,left fashion and creates a mask to only show a certain part of the glitch at a time. */
-  clip: rect(44px, 450px, 56px, 0);
-  /* Runs our glitch-anim defined below to run in a 5s loop, infinitely, with an alternating animation to keep things fresh. */
-  animation: glitch-anim 8s infinite linear alternate-reverse;
-}
-.glitch::after {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  left: -2px;
-  text-shadow: -2px 0 rgb(7, 7, 7), 2px 2px #00ff00
-  ;
-  animation: glitch-anim2 3s infinite linear alternate-reverse;
-}
-
 body {
-  background-image: url('../images/mountains.png');
-  background-size: cover;
-  background-position: center;
-}
-nav {
-  width: 0%;
-  height: 0px;
-  background-color: transparent;
-}
-nav ul {
-    float: left; 
-}
-
-nav ul li {
-    float: left;
-    list-style: none;
-    position: relative;
-}
-
-nav ul li a {
-    display: block;
-    font-family: 'Forum';
-    color: rgb(255, 255, 255);
-    font-size: 40px;
-    padding: 22px 14px;
-    text-decoration: none;
-}
-
-nav ul li ul {
-    display: none;
-    position: absolute;
+    background-image: url('../images/mountains.png');
+    background-size: cover;
+    background-position: center;
+  }
+  nav {
+    width: 0%;
+    height: 0px;
     background-color: transparent;
-    padding: 4px;
-    border-radius: 0px 0px 4px 4px;
-}
-
-nav ul li:hover ul {
-    display: block;
-
-}
-
-nav ul li ul li {
-    width: 180px;
-    border-radius: 4px;
-}
-
-nav ul li ul li a {
-    padding: 8px 14px;
-}
-
-nav ul li ul li a:hover {
-    background-color: rgba(168, 166, 142, 0.3);
-}
-/* Creates an animation with 20 steaps. For each step, it calculates a percentage for the specific step. It then generates a random clip box to be used for the random glitch effect. Also adds a very subtle skew to change the 'thickness' of the glitch.*/
-@keyframes glitch-anim {
-  0% {
-    clip: rect(73px, 9999px, 59px, 0);
-    transform: skew(0.84deg);
   }
-  5% {
-    clip: rect(5px, 9999px, 55px, 0);
-    transform: skew(0.8deg);
+  nav ul {
+      float: left; 
   }
-  10% {
-    clip: rect(14px, 9999px, 74px, 0);
-    transform: skew(0.92deg);
+  
+  nav ul li {
+      float: left;
+      list-style: none;
+      position: relative;
   }
-  15% {
-    clip: rect(26px, 9999px, 67px, 0);
-    transform: skew(0.32deg);
+  
+  nav ul li a {
+      display: block;
+      font-family: 'Forum';
+      color: rgb(0, 0, 0);
+      font-size: 50px;
+      padding: 20px 0px 5px 20px;
+      text-decoration: none;
   }
-  20% {
-    clip: rect(90px, 9999px, 35px, 0);
-    transform: skew(0.26deg);
+  
+  nav ul li ul {
+      display: none;
+      position: absolute;
+      background-color: transparent;
+      padding: 4px;
+      border-radius: 0px 0px 4px 4px;
   }
-  25% {
-    clip: rect(10px, 9999px, 76px, 0);
-    transform: skew(0.77deg);
+  
+  nav ul li:hover ul {
+      display: block;
+      padding: 0px 0px 0px 4px;
   }
-  30% {
-    clip: rect(27px, 9999px, 4px, 0);
-    transform: skew(0.72deg);
+  
+  nav ul li ul li {
+      width: 300px;
+      border-radius: 4px;
   }
-  35% {
-    clip: rect(11px, 9999px, 83px, 0);
-    transform: skew(0.08deg);
+  
+  nav ul li ul li a {
+      font-size: 40px;
+      list-style: upper-roman;
+      padding: 3px 40px;
   }
-  40% {
-    clip: rect(86px, 9999px, 33px, 0);
-    transform: skew(0.76deg);
+  
+  nav ul li ul li a:hover {
+      background-color: rgba(184, 198, 218, 0.3);
+      float: left;
   }
-  45% {
-    clip: rect(51px, 9999px, 60px, 0);
-    transform: skew(0.92deg);
-  }
-  50% {
-    clip: rect(13px, 9999px, 21px, 0);
-    transform: skew(0.77deg);
-  }
-  55% {
-    clip: rect(59px, 9999px, 13px, 0);
-    transform: skew(0.1deg);
-  }
-  60% {
-    clip: rect(85px, 9999px, 13px, 0);
-    transform: skew(0.89deg);
-  }
-  65% {
-    clip: rect(14px, 9999px, 32px, 0);
-    transform: skew(0.16deg);
-  }
-  70% {
-    clip: rect(18px, 9999px, 50px, 0);
-    transform: skew(0.81deg);
-  }
-  75% {
-    clip: rect(57px, 9999px, 77px, 0);
-    transform: skew(0.48deg);
-  }
-  80% {
-    clip: rect(67px, 9999px, 39px, 0);
-    transform: skew(0.15deg);
-  }
-  85% {
-    clip: rect(52px, 9999px, 58px, 0);
-    transform: skew(0.42deg);
-  }
-  90% {
-    clip: rect(38px, 9999px, 71px, 0);
-    transform: skew(0.18deg);
-  }
-  95% {
-    clip: rect(38px, 9999px, 74px, 0);
-    transform: skew(0.58deg);
-  }
-  100% {
-    clip: rect(83px, 9999px, 52px, 0);
-    transform: skew(0.36deg);
-  }
-}
-@keyframes glitch-anim2 {
-  0% {
-    clip: rect(63px, 9999px, 17px, 0);
-    transform: skew(0.74deg);
-  }
-  5% {
-    clip: rect(7px, 9999px, 93px, 0);
-    transform: skew(0.91deg);
-  }
-  10% {
-    clip: rect(68px, 9999px, 86px, 0);
-    transform: skew(0.72deg);
-  }
-  15% {
-    clip: rect(36px, 9999px, 88px, 0);
-    transform: skew(0.89deg);
-  }
-  20% {
-    clip: rect(27px, 9999px, 99px, 0);
-    transform: skew(0.44deg);
-  }
-  25% {
-    clip: rect(67px, 9999px, 59px, 0);
-    transform: skew(0.63deg);
-  }
-  30% {
-    clip: rect(56px, 9999px, 33px, 0);
-    transform: skew(0.39deg);
-  }
-  35% {
-    clip: rect(35px, 9999px, 97px, 0);
-    transform: skew(0.56deg);
-  }
-  40% {
-    clip: rect(34px, 9999px, 52px, 0);
-    transform: skew(0.03deg);
-  }
-  45% {
-    clip: rect(85px, 9999px, 43px, 0);
-    transform: skew(0.43deg);
-  }
-  50% {
-    clip: rect(62px, 9999px, 86px, 0);
-    transform: skew(0.28deg);
-  }
-  55% {
-    clip: rect(40px, 9999px, 95px, 0);
-    transform: skew(0.25deg);
-  }
-  60% {
-    clip: rect(89px, 9999px, 66px, 0);
-    transform: skew(0.55deg);
-  }
-  65% {
-    clip: rect(95px, 9999px, 10px, 0);
-    transform: skew(0.35deg);
-  }
-  70% {
-    clip: rect(66px, 9999px, 82px, 0);
-    transform: skew(0.98deg);
-  }
-  75% {
-    clip: rect(65px, 9999px, 56px, 0);
-    transform: skew(0.75deg);
-  }
-  80% {
-    clip: rect(2px, 9999px, 32px, 0);
-    transform: skew(0.02deg);
-  }
-  85% {
-    clip: rect(98px, 9999px, 21px, 0);
-    transform: skew(0.94deg);
-  }
-  90% {
-    clip: rect(16px, 9999px, 4px, 0);
-    transform: skew(0.84deg);
-  }
-  95% {
-    clip: rect(55px, 9999px, 47px, 0);
-    transform: skew(0.12deg);
-  }
-  100% {
-    clip: rect(10px, 9999px, 95px, 0);
-    transform: skew(0.03deg);
-  }
-}
-@keyframes glitch-skew {
-  0% {
-    transform: skew(-2deg);
-  }
-  10% {
-    transform: skew(0deg);
-  }
-  20% {
-    transform: skew(-3deg);
-  }
-  30% {
-    transform: skew(5deg);
-  }
-  40% {
-    transform: skew(4deg);
-  }
-  50% {
-    transform: skew(-4deg);
-  }
-  60% {
-    transform: skew(-2deg);
-  }
-  70% {
-    transform: skew(2deg);
-  }
-  80% {
-    transform: skew(1deg);
-  }
-  90% {
-    transform: skew(2deg);
-  }
-  100% {
-    transform: skew(0deg);
-  }
-}
