--- a/css/wave.css
+++ b/css/wave.css
@@ -7,7 +7,7 @@ h1 {
   font-family: 'Cabin Condensed', sans-serif;
 }
 #app {
-  height: 100vh;
+  height: 60vh;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -15,7 +15,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 2;
 }
 #wrapper {
   text-align: center;
@@ -23,12 +23,11 @@ h1 {
 body {
     background-image: url('../images/mountains.png');
     background-size: cover;
-    background-position: center;
 }
+
 nav {
   width: 0%;
   height: 0px;
-  background-color: transparent;
 }
 nav ul {
     float: left; 
@@ -43,39 +42,34 @@ nav ul li {
 nav ul li a {
     display: block;
     font-family: 'Forum';
-    color: rgb(255, 255, 255);
+    color: black;
     font-size: 50px;
-    padding: 10px 0px 5px 40px;
+    padding: 3px 3px 3px 3px;
     text-decoration: none;
 }
 
 nav ul li ul {
     display: none;
     position: absolute;
-    background-color: none;
+    background-color: rgba(255, 255, 255, 0.747);
 }
 
 nav ul li:hover ul {
     display: block;
-    padding: 0px 0px 0px 4px;
+    padding: 0px 0px 0px 0px;
 }
 
 nav ul li ul li {
-    width: 99px;
+    width: 170px;
     height: 50px;
-    border-radius: 4px;
+    color: white;
 }
 
 nav ul li ul li a {
     font-size: 40px;
     list-style: decimal;
-    padding: 3px 30px 3px 60px;  
   }
 
 nav ul li ul li a:hover {
-    background-color: rgba(184, 198, 218, 0.3);
-    padding: 3px 30px 3px 60px;
-    float: center;
-    width: 150px;
-    height: 50px;
+    background-color: rgba(132, 172, 196, 0.904);
 }
