--- a/css/wave.css
+++ b/css/wave.css
@@ -1,4 +1,6 @@
 @import url('css.css');
+@import url(https://fonts.googleapis.com/css?family=Cabin+Condensed);
+@import url(https://fonts.googleapis.com/css?family=Forum);
 html,
 body,
 h1 {
@@ -20,56 +22,78 @@ h1 {
 #wrapper {
   text-align: center;
 }
+body,html{margin:0;padding:0;height:100%;}
 body {
     background-image: url('../images/mountains.png');
     background-size: cover;
+    font-family: 'Cabin Condensed', sans-serif;
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+}
+svg {
+  font-weight:bold;
+  max-width:600px;
+  height: 100%;
 }
 
-nav {
-  width: 0%;
-  height: 0px;
+/*---------------------------------------/*
+
+/* nav bar */
+nav{
+  width: 100%;
+  height: 70px;
+  background-color: white;
 }
+
+/* 'socials' */
 nav ul {
-    float: left; 
+  float: left;
 }
 
-nav ul li {
-    float: left;
-    list-style: none;
-    position: relative;
+/* dif socials */
+nav ul li{
+  float: left;
+  list-style: none;
+  position: relative;   /* hides until hovering */
+}
+/* styling for text in navigation */
+nav ul li a{
+  display: block;
+  font-family: 'Forum';
+  color: black;
+  font-size: 40px;
+  text-decoration: none;
 }
 
-nav ul li a {
-    display: block;
-    font-family: 'Forum';
-    color: black;
-    font-size: 50px;
-    padding: 3px 3px 3px 3px;
-    text-decoration: none;
+/* styling for dropdown */
+nav ul li ul{
+  display: none;
+  position: absolute;
+  padding: 0px;
+  background-color: white;
+  padding: 5px 10px; /* spacing between hovering overlay and full outline */
+  border-radius: 0px 0px 10px 10px;
 }
 
-nav ul li ul {
-    display: none;
-    position: absolute;
-    background-color: rgba(255, 255, 255, 0.747);
+/* hover effect */
+nav ul li:hover ul{
+  display: block;
 }
 
-nav ul li:hover ul {
-    display: block;
-    padding: 0px 0px 0px 0px;
+/* dropdown items */
+nav ul li ul li{
+  width: 180px;
+  border-radius: 4px;
+}
+/* padding for dropdown items */
+nav ul li ul li a{
+  padding: 8px 0px;
 }
 
-nav ul li ul li {
-    width: 170px;
-    height: 50px;
-    color: white;
-}
-
-nav ul li ul li a {
-    font-size: 40px;
-    list-style: decimal;
-  }
-
+/* overlay while hovering over items */
 nav ul li ul li a:hover {
-    background-color: rgba(132, 172, 196, 0.904);
+  background-color: rgba(135, 206, 250, 0.5);
+  padding: 8px 4px;
 }
