--- a/css/wave.css
+++ b/css/wave.css
@@ -32,7 +32,7 @@ svg {
 nav{
   width: 100%;
   height: 70px;
-  background-color: white;
+  background-color: transparent;
 }
 
 /* 'socials' */
@@ -50,7 +50,7 @@ nav ul li{
 nav ul li a{
   display: block;
   font-family: 'Forum';
-  color: black;
+  color: white;
   font-size: 40px;
   text-decoration: none;
 }
@@ -60,15 +60,28 @@ nav ul li ul{
   display: none;
   position: absolute;
   padding: 0px;
-  background-color: rgb(255, 255, 255);
+  background-color: transparent;
   padding: 5px 10px; /* spacing between hovering overlay and full outline */
   border-radius: 0px 0px 10px 10px;
 }
 
 /* hover effect */
-nav ul li:hover ul{
-  display: block;
-}
+nav ul li:hover ul {
+  animation: animate 300ms ease-in-out forwards;
+  transform-origin: top center;
+  display: block; }
+  
+  @keyframes animate {
+   0% {
+      transform: scale(0)
+   }
+   80% {
+      transform: scale(1.1)
+   }
+   100% {
+      transform: scale(1)
+   }
+  }
 
 /* dropdown items */
 nav ul li ul li{
@@ -82,7 +95,7 @@ nav ul li ul li a{
 
 /* overlay while hovering over items */
 nav ul li ul li a:hover {
-  background-color: rgba(135, 206, 250, 0.5);
+  background-color: rgba(135, 206, 250, 0.3);
   padding: 8px 4px;
   border-radius: 7px;
 }
