--- a/css/wave.css
+++ b/css/wave.css
@@ -28,6 +28,7 @@ body {
 svg {
   display: block;
   font: 1vw 'Montserrat';
+  font-size: 10vw;
   width: 960px;
   height: 300px;
   margin: 0 auto;
