--- a/css/wave.css
+++ b/css/wave.css
@@ -36,7 +36,7 @@ svg {
   fill: none;
   stroke: white;
   stroke-dasharray: 6% 29%;
-  stroke-width: 0.5px;
+  stroke-width: 0.03vw;
   stroke-dashoffset: 0%;
   animation: stroke-offset 5.5s infinite linear;
 }
