--- a/css/wave.css
+++ b/css/wave.css
@@ -10,7 +10,7 @@ h1 {
 }
 body,html{margin:0;padding:0;height:100%;}
 body {
-  background-image: url(art-taiga.gif);
+  background-image: url('art-taiga.gif');
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-size: cover;
@@ -33,43 +33,6 @@ svg {
   height: 300px;
   margin: 0 auto;
 }
-.text-copy {
-  fill: none;
-  stroke: white;
-  stroke-dasharray: 6% 29%;
-  stroke-width: 0.03vw;
-  stroke-dashoffset: 0%;
-  animation: stroke-offset 5.5s infinite linear;
-}
-.text-copy:nth-child(1){
-	stroke: #be3798;
-	animation-delay: -1;
-}
-
-.text-copy:nth-child(2){
-	stroke: #ff006a;
-	animation-delay: -2s;
-}
-
-.text-copy:nth-child(3){
-	stroke: #0081bd;
-	animation-delay: -3s;
-}
-
-.text-copy:nth-child(4){
-	stroke: #dfc656;
-	animation-delay: -4s;
-}
-
-.text-copy:nth-child(5){
-	stroke: #b6b6b6;
-	animation-delay: -5s;
-}
-
-@keyframes stroke-offset{
-	70% {stroke-dashoffset: -45%;}
-}
-
 /*---------------------------------------/*
 
 /* nav bar */
