--- a/css/wave.css
+++ b/css/wave.css
@@ -56,7 +56,7 @@ nav ul li{
 nav ul li a{
   display: block;
   font-family: 'Forum';
-  color: white;
+  color: black;
   font-size: 40px;
   text-decoration: none;
 }
