--- a/css/wave.css
+++ b/css/wave.css
@@ -1,149 +1,57 @@
 @import url('css.css');
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
-@import url(https://fonts.googleapis.com/css?family=Forum);
 html,
 body,
 h1 {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
   font-family: 'Cabin Montserrat', sans-serif;
 }
-body,html{margin:0;padding:0;height:100%;}
-body {
-<<<<<<< HEAD
-  background-image: url('art-taiga.gif');
-=======
-  background-image: url(art-taiga.gif);
-  background-color: #cccccc;
->>>>>>> parent of 983e63f (bh)
-  background-repeat: no-repeat;
-  background-size: cover;
-  font-family: Arial;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-}
-.container {
-  display: flex;
-/*   border:1px solid red; */
-  height: 100%;
-  align-items: center;
-}
-svg {
-  display: block;
-  font: 1vw 'Montserrat';
-  width: 960px;
-  height: 300px;
-  margin: 0 auto;
-}
-.text-copy {
-  fill: none;
-  stroke: white;
-  stroke-dasharray: 6% 29%;
-  stroke-width: 0.03vw;
-  stroke-dashoffset: 0%;
-  animation: stroke-offset 5.5s infinite linear;
-}
-.text-copy:nth-child(1){
-	stroke: #be3798;
-	animation-delay: -1;
-}
-
-.text-copy:nth-child(2){
-	stroke: #ff006a;
-	animation-delay: -2s;
-}
-
-.text-copy:nth-child(3){
-	stroke: #0081bd;
-	animation-delay: -3s;
-}
-
-.text-copy:nth-child(4){
-	stroke: #dfc656;
-	animation-delay: -4s;
-}
-
-.text-copy:nth-child(5){
-	stroke: #b6b6b6;
-	animation-delay: -5s;
-}
-
-@keyframes stroke-offset{
-	70% {stroke-dashoffset: -45%;}
-}
-
-/*---------------------------------------/*
-
-/* nav bar */
-nav{
+#app {
+  background: #0a0a0a;
+  height: 100vh;
   width: 100%;
-  height: 70px;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(rgba(10, 10, 10, 0.5), rgba(0, 0, 0, 0.5)), repeating-linear-gradient(0, transparent, transparent 2px, black 3px, black 3px),
+    url('../images/ball.gif');
+  background-size: auto;
+  background-position: center;
+  z-index: 1;
+}
+/*--------------------------------------nav bar*/
+nav{
+  position: fixed;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
   background-color: transparent;
+  color: rgb(190, 190, 190);
+  font-family: 'Fugaz One', cursive;
 }
-
-/* 'socials' */
-nav ul {
-  float: left;
+.logo{
+  color: rgb(190, 190, 190);
+  letter-spacing: 4px;
+  font-size: 30px;
 }
-
-/* dif socials */
-nav ul li{
-  float: left;
+.nav-links{
+  display: flex;
+  justify-content: space-around;
+  width: 35%;
+}
+.nav-links li{
   list-style: none;
-  position: relative;   /* hides until hovering */
 }
-/* styling for text in navigation */
-nav ul li a{
-  display: block;
-  font-family: 'Forum';
-  color: black;
-  font-size: 40px;
+.nav-links a{
+  color: rgb(190, 190, 190);
   text-decoration: none;
+  letter-spacing: 2px;
+  font-size: 18px;
 }
-
-/* styling for dropdown */
-nav ul li ul{
-  display: none;
-  position: absolute;
-  padding: 0px;
-  background-color: transparent;
-  padding: 5px 10px; /* spacing between hovering overlay and full outline */
-  border-radius: 0px 0px 10px 10px;
-}
-
-/* hover effect */
-nav ul li:hover ul {
-  animation: animate 300ms ease-in-out forwards;
-  transform-origin: top center;
-  display: block; }
-  
-  @keyframes animate {
-   0% {
-      transform: scale(0)
-   }
-   80% {
-      transform: scale(1.1)
-   }
-   100% {
-      transform: scale(1)
-   }
-  }
-
-/* dropdown items */
-nav ul li ul li{
-  width: 180px;
-  border-radius: 4px;
-}
-/* padding for dropdown items */
-nav ul li ul li a{
-  padding: 8px 0px;
-}
-
-/* overlay while hovering over items */
-nav ul li ul li a:hover {
-  background-color: rgba(135, 206, 250, 0.3);
-  padding: 8px 4px;
-  border-radius: 7px;
-}
+/*--------------------------------------nav bar*/
