--- a/css/css.css
+++ b/css/css.css
@@ -34,7 +34,7 @@ nav{
 .logo{
   color: rgb(190, 190, 190);
   letter-spacing: 3px;
-  font-size: 20x;  
+  font-size: 25px;  
 }
 .nav-links{
   display: flex;
