--- a/css/css.css
+++ b/css/css.css
@@ -28,7 +28,7 @@ nav{
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
-  background-color: #040c1c;
+  background-color: #02070f;
   font-family: 'Fugaz One', cursive;
 }
 .logo{
