--- a/css/css.css
+++ b/css/css.css
@@ -76,7 +76,7 @@ nav{
     height: 92vh;
     width: 15em;
     top: 8vh;
-    background-color: #040c1c;
+    background-color: #06132e;
     display: flex;
     flex-direction: column;
     align-items: center;
