--- a/css/css.css
+++ b/css/css.css
@@ -104,7 +104,8 @@ nav{
   }
   .burger{
     display: block;
-    padding: 0px 80px 0px 500px;
+    margin-left: auto;
+    margin-right: 4rem;
   }
   hr.left{
     height: 0px;
