--- a/css/css.css
+++ b/css/css.css
@@ -26,6 +26,13 @@
   background-position: center;
   z-index: 1;
 }
+h2{
+  color: rgb(190, 190, 190);
+  font-family: "Rubik", sans-serif;
+  font-size: 40px;
+  margin-left: 14rem;
+  margin-right: auto;
+}
 /*--------------------------------------lines*/
 hr.left {
   display: block;
@@ -142,86 +149,109 @@ nav{
 }
 /*--------------------------------------nav bar*/
 /*--------------------------------------sparkle*/
-  @keyframes background-pan {
-    from {
-      background-position: 0% center;
-    }
-    
-    to {
-      background-position: -200% center;
-    }
+@keyframes background-pan {
+  from {
+    background-position: 0% center;
   }
   
-  @keyframes scale {
-    from, to {
-      transform: scale(0);
-    }
-    
-    50% {
-      transform: scale(1);
-    }
+  to {
+    background-position: -200% center;
+  }
+}
+@keyframes scale {
+  from, to {
+    transform: scale(0);
   }
   
-  @keyframes rotate {
-    from {
-      transform: rotate(0deg);
-    }
-    
-    to {
-      transform: rotate(180deg);
-    }
+  50% {
+    transform: scale(1);
+  }
+}
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
   }
   
-  h1 {
-    color: white;
-    font-family: "Rubik", sans-serif;
-    font-size: clamp(2em, 2vw, 4em);
-    font-weight: 400;
-    margin: 0px;
-    padding: 20px;
-    text-align: center;
+  to {
+    transform: rotate(180deg);
   }
+}
+h1 {
+  color: white;
+  font-family: "Rubik", sans-serif;
+  font-size: clamp(2em, 2vw, 4em);
+  font-weight: 400;
+  margin: 0px;
+  padding: 20px;
+  text-align: center;
+}
+h1 > .magic {
+  display: inline-block;
+  position: relative;
+}
+h1 > .magic > .magic-star {
+  --size: clamp(20px, 1.5vw, 30px);
   
-  h1 > .magic {
-    display: inline-block;
-    position: relative;
-  }
-  
-  h1 > .magic > .magic-star {
-    --size: clamp(20px, 1.5vw, 30px);
-    
-    animation: scale 700ms ease forwards;
-    display: block;
-    height: var(--size);
-    left: var(--star-left);
-    position: absolute;
-    top: var(--star-top);
-    width: var(--size);
-  }
-  
-  h1 > .magic > .magic-star > svg {
-    animation: rotate 1000ms linear infinite;
-    display: block;
-    opacity: 0.7;
-  }
-  
-  h1 > .magic > .magic-star > svg > path {
-    fill: var(--white);
-  }
-  
-  h1 > .magic > .magic-text {
-    animation: background-pan 3s linear infinite;
-    background: linear-gradient(
-      to right,
-      var(--purple),
-      var(--violet),
-      var(--pink),
-      var(--purple)
-    );
-    background-size: 200%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    white-space: nowrap;
-    font-size: 64px;
-  }
+  animation: scale 700ms ease forwards;
+  display: block;
+  height: var(--size);
+  left: var(--star-left);
+  position: absolute;
+  top: var(--star-top);
+  width: var(--size);
+}
+h1 > .magic > .magic-star > svg {
+  animation: rotate 1000ms linear infinite;
+  display: block;
+  opacity: 0.7;
+}
+h1 > .magic > .magic-star > svg > path {
+  fill: var(--white);
+}
+h1 > .magic > .magic-text {
+  animation: background-pan 3s linear infinite;
+  background: linear-gradient(
+    to right,
+    var(--purple),
+    var(--violet),
+    var(--pink),
+    var(--purple)
+  );
+  background-size: 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  white-space: nowrap;
+  font-size: 64px;
+}
+
+
+
+h2 {
+  color: white;
+  font-family: "Rubik", sans-serif;
+  font-size: clamp(2em, 2vw, 4em);
+  font-weight: 400;
+  margin: 0px;
+  padding: 20px;
+  text-align: center;
+}
+h2 > .magic {
+  display: inline-block;
+  position: relative;
+}
+h2 > .magic > .magic-text {
+  animation: background-pan 3s linear infinite;
+  background: linear-gradient(
+    to right,
+    var(--purple),
+    var(--violet),
+    var(--pink),
+    var(--purple)
+  );
+  background-size: 200%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  white-space: nowrap;
+  font-size: 48px;
+}  
 /*--------------------------------------sparkle*/
