--- a/css/css.css
+++ b/css/css.css
@@ -100,7 +100,7 @@ nav{
   .nav-links{
     position: absolute;
     right: 0px;
-    height: 30vh;
+    height: 33vh;
     width: 15em;
     top: 8vh;
     display: flex;
@@ -108,6 +108,8 @@ nav{
     align-items: center;
     transform: translateX(100%);
     transition: transform 0.4s ease-in;
+    background-color: grey;
+    z-index: 1;
   }
   .burger{
     display: block;
