--- a/css/css.css
+++ b/css/css.css
@@ -75,7 +75,7 @@ nav{
   color: rgb(190, 190, 190);
   text-decoration: none;
   letter-spacing: 2px;
-  font-size: 20px;
+  font-size: 1.5vw;
 }
 .burger{
   display: none;
