--- a/css/css.css
+++ b/css/css.css
@@ -36,7 +36,7 @@ h2{
 /*--------------------------------------lines*/
 hr.left {
   display: block;
-  width: 20%;
+  width: 30%;
   height: 1px;
   border: 0;
   border-top: 2px solid rgb(190, 190, 190);
@@ -45,7 +45,7 @@ hr.left {
 }
 hr.right {
   display: block;
-  width: 20%;
+  width: 30%;
   height: 1px;
   border: 0;
   border-top: 2px solid rgb(190, 190, 190);
@@ -64,7 +64,7 @@ nav{
 }
 .nav-links{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   width: 50%;
 }
 .nav-links li{
@@ -73,8 +73,8 @@ nav{
 .nav-links a{
   color: rgb(190, 190, 190);
   text-decoration: none;
-  letter-spacing: 2px;
-  font-size: 1.5vw;
+  letter-spacing: 3px;
+  font-size: 30px;
 }
 .burger{
   display: none;
