--- a/css/css.css
+++ b/css/css.css
@@ -1,17 +1,13 @@
 @import url('css.css');
-:root {  
-  --purple: rgb(123, 31, 162);
-  --violet: rgb(103, 58, 183);
-  --pink: rgb(244, 143, 177);
-  --white: rgb(190, 190, 190);
-}
-* {
+body{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow: hidden;
 }
 #app {
-  background: #0a0a0a;
+  background: #213023;
+  position: relative;
   height: 100vh;
   width: 100%;
   margin: 0;
@@ -20,8 +16,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgba(10, 10, 10, 0.5), rgba(0, 0, 0, 0.5)), repeating-linear-gradient(0, transparent, transparent 2px, black 3px, black 3px),
-    url('../images/background.jpg');
+  background: #000000;
   background-size: auto;
   background-position: center;
   z-index: 1;
@@ -39,12 +34,12 @@ img {
   display: inline-block;
   width: 100px;
   height: 100px;
-  padding: 5px;
+  padding: 4px;
 }
 img[title]::after {
   content: attr(title);
   background: black;
-  color: white;
+  color: rgb(0, 0, 0);
   padding: 4px 8px;
   border-radius: 4px;
   white-space: nowrap;
@@ -59,133 +54,36 @@ img[title]:hover::after {
   transition: visibility 0s linear 0s, opacity 0.3s linear;
 }
 .tele{
-  box-shadow: 0 0 20px white;
-  padding: 10px;
-  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 0 20px rgb(0, 0, 0);
+  padding: 2px;
+  background-color: rgba(187, 0, 187, 0.2);
   border-radius: 50%;
   margin-right: 15px;
 }
 .dc{
-  box-shadow: 0 0 20px white;
-  padding: 10px;
-  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 0 0 20px rgb(0, 0, 0);
+  padding: 2px;
+  background-color: rgba(187, 0, 187, 0.2);
   border-radius: 50%;
   margin-left: 15px;
 
 }
-/*--------------------------------------sparkle*/
-@keyframes background-pan {
-  from {
-    background-position: 0% center;
-  }
-  
-  to {
-    background-position: -200% center;
-  }
-}
-@keyframes scale {
-  from, to {
-    transform: scale(0);
-  }
-  
-  50% {
-    transform: scale(1);
-  }
-}
-@keyframes rotate {
-  from {
-    transform: rotate(0deg);
-  }
-  
-  to {
-    transform: rotate(180deg);
-  }
-}
-h1 {
-  color: white;
-  font-family: 'Exo 2', sans-serif;
-  font-size: clamp(2em, 2vw, 4em);
-  font-weight: 900;
-  width: 100%;
-  margin: 0px;
-  padding: 20px;
-  text-align: center;
+pre{
   position: absolute;
-  top: 50%;
+  z-index: 2;
+}
+
+#header{
+  color: purple;
+  font-size: 12px;
+  margin: 0 auto;
   left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 20px white;
-  /*text-shadow: 0 0 13px white;*/
-}
-h1 > .magic {
-  display: inline-block;
-  position: relative;
-}
-h1 > .magic > .magic-star {
-  --size: clamp(20px, 1.5vw, 30px);
-  
-  animation: scale 700ms ease forwards;
   display: block;
-  height: var(--size);
-  left: var(--star-left);
-  position: absolute;
-  top: var(--star-top);
-  width: var(--size);
-}
-h1 > .magic > .magic-star > svg {
-  animation: rotate 1000ms linear infinite;
-  display: block;
-  opacity: 0.7;
-}
-h1 > .magic > .magic-star > svg > path {
-  fill: var(--white);
-}
-h1 > .magic > .magic-text {
-  animation: background-pan 3s linear infinite;
-  background: linear-gradient(
-    to right,
-    var(--purple),
-    var(--violet),
-    var(--pink),
-    var(--purple)
-  );
-  background-size: 200%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  white-space: nowrap;
-  font-size: 64px;
-}
-
-
-
-h2 {
-  color: white;
-  font-family: "Rubik", sans-serif;
-  font-size: clamp(2em, 2vw, 4em);
-  font-weight: 400;
-  margin: 0px;
-  padding: 20px;
   text-align: center;
+  transform: translate(-50%, -0%);
+  padding-top: 15px;
 }
-h2 > .magic {
-  display: inline-block;
-  position: relative;
+#card{
+  color: darkblue;
+  font-size: 1px;
 }
-h2 > .magic > .magic-text {
-  animation: background-pan 3s linear infinite;
-  background: linear-gradient(
-    to right,
-    var(--purple),
-    var(--violet),
-    var(--pink),
-    var(--purple)
-  );
-  background-size: 200%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  white-space: nowrap;
-  font-size: 48px;
-}  
-/*--------------------------------------sparkle*/
-/*ch0n*/
