--- a/css/css.css
+++ b/css/css.css
@@ -5,6 +5,41 @@ body{
   box-sizing: border-box;
   overflow: hidden;
 }
+#enter {
+  top: 0;
+  left: 0;
+  z-index: 3;
+  opacity: 1;
+  width: 100%;
+  height: 100vh;
+  cursor: pointer;
+  position: fixed;
+  text-align: center;
+  background-color: #000000;
+  transition: opacity 0.9s ease-in-out;
+}
+.begin {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: purple;
+  position: absolute;
+  font-weight: normal;
+  font-size: 20px;
+  font-family: "Segoe UI", "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
+}
+.begin1 {
+  position: fixed;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: purple;
+  position: absolute;
+  font-weight: normal;
+  font-size: 12px;
+  font-family: "Segoe UI", "Source Sans Pro", Calibri, Candara, Arial, sans-serif;
+}
 #app {
   background: #213023;
   position: relative;
