--- a/css/css.css
+++ b/css/css.css
@@ -26,6 +26,9 @@ h1 {
   font-weight: 900;
   text-align: center;
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   margin: 0 auto;
   display: flex;
   justify-content: center;
