--- a/css/css.css
+++ b/css/css.css
@@ -26,7 +26,7 @@ h1 {
   font-weight: 900;
   text-align: center;
   position: fixed;
-  top: 0;
+  top: 50%;
   left: 0;
   right: 0;
   margin: 0 auto;
