--- a/css/css.css
+++ b/css/css.css
@@ -13,7 +13,8 @@ body, html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url(../media/images/);
+  background-color: black;
+  background: url(../media/1.jpg);
   background-size: auto;
   background-position: center;
   background-repeat: no-repeat;
